--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-body{
-    background-color: blueviolet;
+/* common Property */
+.noto-serif{
+    font-family: "Noto Serif", serif;
+}
+.inter{
+     font-family: "Inter", sans-serif;
 }
