--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ nav a{
     position: absolute;
     top: -120px;
     left: 380px;
+    filter: drop-shadow(5px 5px 5px #35353681);
 }
 .trusted-sale img{
     width: 100%;
